--- a/CNC-leo/index.html
+++ b/CNC-leo/index.html
@@ -344,30 +344,30 @@
 						<span href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Motor</h4>
 							<p class="list-group-item-text">
-								<button type="button" class="btn btn-success">START</button>
-								<button type="button" class="btn btn-danger" onclick="abort()">STOP</button>
-								<button type="button" class="btn btn-warning" onclick="reset()">RESET</button>
+								<button type="button" id="motor_start" class="btn btn-success">START</button>
+								<button type="button" id="motor_stop" class="btn btn-danger" >STOP</button>
+								<button type="button" id="motor_reset" class="btn btn-warning" >RESET</button>
 							</p>
 						</span>
 						<span href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Cooling</h4>
 							<p class="list-group-item-text">
-								<button type="button" class="btn btn-success">START</button>
-								<button type="button" class="btn btn-danger" onclick="abort()">STOP</button>
+								<button type="button" id="cooling_start" class="btn btn-success">START</button>
+								<button type="button" id="cooling_stop" class="btn btn-danger" >STOP</button>
 							</p>
 						</span>
 						<span href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Spindle</h4>
 							<p class="list-group-item-text">
 								<div class="row" style="margin-right:2px;margin-left:2px;">
-									<button type="button" class="btn btn-danger" style="height:30px;width:15%;float:left">0</button>
+									<button type="button" id="splindle_o" class="btn btn-danger" style="height:30px;width:15%;float:left">0</button>
 									<div class="progress" id="progress_spindle" style="width:70%;height:30px;float:left;">
 										<div class="progress-bar progress-bar-info" id="progress_value" role="progressbar" aria-valuenow="0"
 										aria-valuemin="0" aria-valuemax="100" style="width:0%">
 
 										</div>
 									</div>
-								<button type="button" class="btn btn-success" style="height:30px;width:15%;float:left">100</button>
+								<button type="button" id="splindle_cent" class="btn btn-success" style="height:30px;width:15%;float:left">100</button>
 								</div>
 							</p>
 						</span>
